# polar-stress

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  VALIDATION_README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  test_local.py  test_local_comprehensive.py  test_local_unit.py  validate_inversion_method.py
.github/workflows/: main.yml  pypi.yml  test.yml
contributing/: index.html
docs/: contributing.md  examples.md  getting-started.md  index.md  reference.md  testing.md  user-guide.md
docs/reference/: disk.md  equilibrium_solver.md  image.md  index.md  intensity_solver.md  io.md  main.md  plotting.md  solver.md  stokes_solver.md
examples/: debug_optimization.py  index.html
getting-started/: index.html
json/: EVT.json5  HGD.json5  disk.json5  params.json5  test.json5
papers/: plot_config.py  validate_inversion_method.py
photoelastimetry/: disk.py  image.py  io.py  local.py  main.py  plotting.py
photoelastimetry/solver/: __init__.py  equilibrium_solver.py  intensity_solver.py  stokes_solver.py
polar-stress/: image.py  main.py  plotting.py
polar_stress/: disk.py  invert.py  io.py  local.py  main.py  plotting.py
reference/: index.html
reference/disk/: index.html
reference/equilibrium_solver/: index.html
reference/image/: index.html
reference/intensity_solver/: index.html
reference/io/: index.html
reference/main/: index.html
reference/plotting/: index.html
reference/solver/: index.html
reference/stokes_solver/: index.html
search/: search_index.json
testing/: index.html
tests/: __init__.py  test_disk.py  test_equilibrium_solver.py  test_image_io.py  test_intensity_solver.py  test_io_functions.py  test_main.py  test_stokes_solver.py  test_stokes_solver_pytest.py
user-guide/: index.html
