[project]
name = "photoelastimetry"
version = "0.4"
requires-python = ">=3.9"
authors = [
  {name = "Benjy Marks", email = "benjy.marks@sydney.edu.au"},
  {name = "Qianyu Fang", email = "qianyu.fang@sydney.edu.au"},
]
description = "Package for processing polarised images to measure stress in granular media"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["granular", "polarimetry","photoelasticity", "stress"]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "tqdm",
    "json5",
    "tifffile",
    "joblib",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pytest-xdist",
    "coverage[toml]",
    "black",
    "flake8",
    "pre-commit",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material", 
    "markdown-include",
    "mkdocs-include-markdown-plugin",
]
all = [
    "photoelastimetry[dev,docs]",
]

[project.scripts]
image-to-stress = "photoelastimetry.main:cli_image_to_stress"
stress-to-image = "photoelastimetry.main:cli_stress_to_image"
demosaic-raw = "photoelastimetry.main:cli_demosaic"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
target-version = ['py311']

[tool.setuptools]
packages = ["photoelastimetry"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-v",
    "--tb=short", 
    "--strict-markers",
    "--strict-config",
    "--cov=photoelastimetry",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=70"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["photoelastimetry"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*", 
    "*/.*",
    "setup.py",
    "docs/*",
    "papers/*",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"